--- a/comiclysm-app/src/app/home/home.component.html
+++ b/comiclysm-app/src/app/home/home.component.html
@@ -1,4 +1,7 @@
 <div class = "home-container">
     <h3>HOME</h3>
   </div>
-<app-featured-heroes></app-featured-heroes>
+  <app-featured-heroes-home></app-featured-heroes-home>
+<!-- <app-featured-heroes></app-featured-heroes> -->
+
+<app-featured-comics-home></app-featured-comics-home>
