Featured comics now display images of the comics

--- a/comiclysm-app/src/app/featured-comics-home/featured-comics-home.component.html
+++ b/comiclysm-app/src/app/featured-comics-home/featured-comics-home.component.html
@@ -5,6 +5,7 @@
   </div>
   <div class = "featuredComicsList">
     <div class = "featuredComicsCard" *ngFor = "let comics of featuredComics">
+        <img src = "{{comics.comicCoverImg}}">
         <p>{{comics.comicName}}</p>
     </div>
   </div>
