--- a/comiclysm-app/src/app/home/home.component.html
+++ b/comiclysm-app/src/app/home/home.component.html
@@ -3,5 +3,5 @@
   </div>
   <app-featured-heroes-home></app-featured-heroes-home>
 <!-- <app-featured-heroes></app-featured-heroes> -->
-
+<!-- <app-featured-volumes-home></app-featured-volumes-home> -->
 <app-featured-comics-home></app-featured-comics-home>
