Added pagination for our list of comic books. Once user clicks on see all under Featured Comics, they can see our whole list of comic books

--- a/comiclysm-app/src/app/featured-comics-home/featured-comics-home.component.css
+++ b/comiclysm-app/src/app/featured-comics-home/featured-comics-home.component.css
@@ -19,7 +19,7 @@
 .comicsList{ 
     list-style: none;
 }
-.featuredComicsList li { 
+.comicsList li { 
     flex-wrap: nowrap;
     margin: 0 auto;
     float: left;
