--- a/comiclysm-app/src/app/featured-comics-home/featured-comics-home.component.html
+++ b/comiclysm-app/src/app/featured-comics-home/featured-comics-home.component.html
@@ -2,7 +2,7 @@
   <div class = "row">
       <div class = "featuredComicsHeaderContainer">
           <h1 class = "featuredComicsHeader"> Featured Comics </h1>
-          <a class = "see-all-link"> see all </a>
+          <a class = "see-all-link" routerLink = "/showComics"> see all </a>
         </div>
   </div>
   <div class = "row">
