Filtering functionality is working

--- a/comiclysm-app/src/app/main-comic-list/main-comic-list.component.html
+++ b/comiclysm-app/src/app/main-comic-list/main-comic-list.component.html
@@ -1,3 +1,11 @@
+
+<app-side-bar-filter
+(filterByName) = "getComicsByName($event)"
+(filterByWriter) = "getComicsByWriter($event)"
+(filterByArtist) = "getComicsByArtist($event)"
+(filterByYear) = "getComicsByYear($event)"
+>
+</app-side-bar-filter>
 <div class = "container">
   <div class = "row"></div>
   <div class = "row">
