--- a/comiclysm-app/src/app/side-bar-filter/side-bar-filter.component.html
+++ b/comiclysm-app/src/app/side-bar-filter/side-bar-filter.component.html
@@ -1,18 +1,18 @@
 <div class = "sideBarContainer">
   <div class = "filterByNameContainer">
     <input placeholder = "Enter Character Name:" [(ngModel)] = "comicNameInput">
-    <button (click) = "callFilterByName()"> Search By Character </button>
+    <button (click) = "callFilterByName()"> Search </button>
   </div>
   <div class = "filterByYearContainer">
     <input placeholder = "Enter Year:" [(ngModel)] = "comicDateInput">
-    <button (click) = "callFilterByYear()"> Search By Year </button>
+    <button (click) = "callFilterByYear()"> Search </button>
   </div>
   <div class = "filterByWriterContainer">
     <input placeholder = "Enter Writer's Name:" [(ngModel)] = "comicWriterInput">
-    <button (click) = "callFilterByWriter()">Search By Writer </button>
+    <button (click) = "callFilterByWriter()">Search </button>
   </div>
   <div class = "filterByArtistContainer">
-    <input placeholder = "Enter Artistt's Name:" [(ngModel)] = "comicArtistInput">
-    <button (click) = "callFilterByArtist()">Search By Artist </button>
+    <input placeholder = "Enter Artist's Name:" [(ngModel)] = "comicArtistInput">
+    <button (click) = "callFilterByArtist()">Search</button>
   </div>
 </div>
