--- a/comiclysm-app/src/app/main-comic-list/main-comic-list.component.css
+++ b/comiclysm-app/src/app/main-comic-list/main-comic-list.component.css
@@ -1,10 +1,23 @@
+.sample-box {
+    width: 100%;
+    display: block;
+    height: 50px;
+    background-color: #245ace;
+}
+
 .comicListContainer { 
     width: 100%;
     margin: 0 auto;
     display: block;
+    float:left;
 }
 .comicList {
     list-style: none;
+    width: 80%;
+    float: right;
+    margin: 0 auto;
+    padding: 0;
+    margin-top: 100px;
 }
 
 .comicList li { 
