--- a/comiclysm-app/src/app/side-bar-filter/side-bar-filter.component.css
+++ b/comiclysm-app/src/app/side-bar-filter/side-bar-filter.component.css
@@ -1,5 +1,12 @@
 .sideBarContainer { 
-    width: 100%;
+    width: 15%;
+    height: 2000px;
+    background-color:black;
+    display: block;
+    float: left;
+    z-index: 1;
+    position: absolute;
+
 }
 
 button {
