--- a/comiclysm-app/src/styles.css
+++ b/comiclysm-app/src/styles.css
@@ -3,8 +3,8 @@ html,body {
     margin: 0px;
     padding: 0;
     width:100%;
-    background-color: rgb(17, 34, 61);
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: rgb(69, 134, 233);
 }
 
 .container { 
