Home page now welcomes a user by their user name (retrieved by local storage)

--- a/comiclysm-app/src/app/home/home.component.html
+++ b/comiclysm-app/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class = "home-container">
-    <h3>HOME</h3>
+    <h3>HOME Welcome {{user.userName}} !</h3>
   </div>
   <app-featured-heroes-home></app-featured-heroes-home>
 <!-- <app-featured-heroes></app-featured-heroes> -->
