Users can now make their own inventories.

--- a/comiclysm-app/src/app/home/home.component.html
+++ b/comiclysm-app/src/app/home/home.component.html
@@ -1,6 +1,8 @@
-<div class = "home-container">
-    <h3>HOME Welcome {{user.userName}} !</h3>
-  </div>
+
+<app-nav-bar></app-nav-bar>
+<div class = "homeContainer">
+    <h3 class = "homeHeader"> Welcome {{user.userName}} !</h3>
+</div>
   <app-featured-heroes-home></app-featured-heroes-home>
 <!-- <app-featured-heroes></app-featured-heroes> -->
 <!-- <app-featured-volumes-home></app-featured-volumes-home> -->
