--- a/comiclysm-app/src/app/nav-bar/nav-bar.component.html
+++ b/comiclysm-app/src/app/nav-bar/nav-bar.component.html
@@ -1,8 +1,12 @@
 
 <div class = "navBarContainer">
   <nav class = "navBar">
+    <h1 class = "navBarHeader"> Comiclysm </h1>
     <ul class = "navLinks">
       <li> <a routerLink="/home">Home</a></li>
+      <li> <a routerLink="/inventory"> Inventory </a> </li>
+      <li> <a routerLink="/trade"> Trade </a>
+      <li> <a (click) = "logOut()"> Log Out </a></li>
     </ul>
   </nav>
 </div>
