Added comic details component.

--- a/comiclysm-app/src/app/comic-card/comic-card.component.html
+++ b/comiclysm-app/src/app/comic-card/comic-card.component.html
@@ -1,4 +1,4 @@
-<div class = "comic-card-container">
+<div class = "comic-card-container" routerLink = "/comic/{{comicName}}">
   <div class = "comic-img-container">
     <img class = "comic-img" src = "{{comic.comicCoverImg}}">
   </div>
