--- a/comiclysm-app/src/styles.css
+++ b/comiclysm-app/src/styles.css
@@ -5,6 +5,7 @@ html,body {
     width:100%;
     background-color: rgb(255, 255, 255);
     color: rgb(69, 134, 233);
+    font-family: Verdana, Geneva, sans-serif;
 }
 
 .container { 
