--- a/comiclysm-app/src/app/comic-card/comic-card.component.html
+++ b/comiclysm-app/src/app/comic-card/comic-card.component.html
@@ -1,6 +1,6 @@
 <div class = "comic-card-container" routerLink = "/comic/{{comicName}}">
   <div class = "comic-img-container">
-    <img class = "comic-img" src = "{{comic.comicCoverImg}}">
+    <img default = "https://vignette.wikia.nocookie.net/marvel_dc/images/2/2c/Gotham_City_Garage_Vol_1_12.jpg/revision/latest?cb=20180329140500" class = "comic-img" src = "{{comic.comicCoverImg}}">
   </div>
   <div class = "comic-name-container">
     <p class = "comic-name"> {{ comic.comicName }}</p>
