--- a/comiclysm-app/src/app/app.component.html
+++ b/comiclysm-app/src/app/app.component.html
@@ -1,1 +1,5 @@
+
+<style>
+        @import url('https://fonts.googleapis.com/css?family=Russo+One|Ubuntu');
+        </style>
 <router-outlet></router-outlet>
