--- a/comiclysm-app/src/app/comic-card/comic-card.component.css
+++ b/comiclysm-app/src/app/comic-card/comic-card.component.css
@@ -5,6 +5,7 @@
     margin: 0 auto; 
     margin: 0 15px;
     box-shadow: 1px 1px 2px black;
+    background-color: black;
 }
 .comic-img-container, .comic-name-container{ 
     display: block;
@@ -17,6 +18,7 @@
     width: 100%;
     font-size: 16px;
     text-align: center;
+    color: white;
 }
 
 .comic-img { 
