--- a/comiclysm-app/src/app/home/home.component.css
+++ b/comiclysm-app/src/app/home/home.component.css
@@ -1,8 +1,14 @@
 .homeContainer {
     width: 100%;
     margin: 50px auto 10px auto;
+    margin-top: 10%;
+    background-color: black;
 }
 
 .homeHeader{ 
     text-align: center;
+    font-size: 50px;
+    font-family: 'Russo One', sans-serif;
+    text-shadow: 1px 1px 2px black;
+    color: white;
 }
