--- a/comiclysm-app/src/app/home/home.component.html
+++ b/comiclysm-app/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
 <app-nav-bar></app-nav-bar>
 <div class = "homeContainer">
-    <h3 class = "homeHeader"> Welcome {{user.userName}} !</h3>
+    <h3 class = "homeHeader"> Welcome {{user.userName}}, To Comiclysm !</h3>
 </div>
   <app-featured-heroes-home></app-featured-heroes-home>
 <!-- <app-featured-heroes></app-featured-heroes> -->
