--- a/comiclysm-app/src/app/nav-bar/nav-bar.component.css
+++ b/comiclysm-app/src/app/nav-bar/nav-bar.component.css
@@ -1,11 +1,13 @@
 .navBarContainer { 
     width: 100%;
     height: 50px;
-    background-color:rgb(33, 31, 173);
+    background-color:black;
+    border-bottom: 5px solid rgba(4, 113, 255, 0.76);
     display: block;
     margin: 0px auto 50px auto;
     position: fixed;
     top: 0;
+    box-shadow: 1px 1px 2px black;
 }
 
 .navBar {
@@ -15,23 +17,50 @@
 .navBarHeader {
     width: 10%;
     display: block;
-    margin: 5px auto;
+    margin: 5px 10px;
     float: left;
+    color: white;
+    font-size: 35px;
 }
 
 .navLinks {
     list-style: none;
     width: 80%;
     margin: 5px auto;
+    margin: 5px 0px 50% 5px;
     display: block;
     float: left;
-}
-
-.navLinks li {
-    display: inline-block;
-    margin: 5px 10px;
 }
 .navLinks li a {
     text-decoration: none;
     color: white;
+}
+
+.navLinkItem{
+    display: inline-block;
+    margin: 0px 10px;
+    padding: 11px 32px;
+}
+
+.navLinkItem:hover{
+    color: rgba(4, 113, 255, 1);
+    border-bottom: 2px solid rgba(4, 113, 255, 1);
+    transition: border-bottom 0.3s;
+    transition-timing-function: ease-in-out;
+    -webkit-transition-timing-function: ease-in-out;
+}
+.navLink:hover{
+    color: rgba(4, 113, 255, 1);
+    transition: color 0.3s;
+    cursor: pointer;
+    transition-timing-function: ease-in-out;
+    -webkit-transition-timing-function: ease-in-out;
+}
+
+.logoutButton:hover{
+    cursor: pointer;
+    color: rgba(4, 113, 255, 1);
+    transition: color 0.3s ease-in-out;
+    transition-timing-function: ease-in-out;
+    -webkit-transition-timing-function: ease-in-out;
 }
