Another UI change in featured heroes. Will try to place a link that when pressed, users will be taken to the comics page with that filter only

--- a/comiclysm-app/src/app/featured-heroes-home/featured-heroes-home.component.css
+++ b/comiclysm-app/src/app/featured-heroes-home/featured-heroes-home.component.css
@@ -16,10 +16,11 @@
 }
 
 .featured-heroes-header, .see-all-link { 
-    width: 50%;
+    width: 100%;
     margin: 0 auto;
     display: block;
     float: left;
+    text-align: center;
 }
 
 .featured-hero-card {
