--- a/comiclysm-app/src/app/featured-heroes-home/featured-heroes-home.component.html
+++ b/comiclysm-app/src/app/featured-heroes-home/featured-heroes-home.component.html
@@ -1,7 +1,7 @@
 <div class = "featured-heroes-home-container">
   <div class = "featured-heroes-header-container">
       <h1 class = "featured-heroes-header">Featured Heroes</h1>
-      <a class = "see-all-link" routerLink = "/seeAllFeaturedHeroes"> see all </a>
+      <!-- <a class = "see-all-link" routerLink = "/seeAllFeaturedHeroes"> see all </a> -->
   </div>
   <div class = "featured-heroes-home-list">
     <div class = "featured-hero-card" *ngFor = "let hero of featuredHeroes">
