--- a/comiclysm-app/src/app/user-inventory/user-inventory.component.css
+++ b/comiclysm-app/src/app/user-inventory/user-inventory.component.css
@@ -1,3 +1,6 @@
+.container{ 
+    background-color: black;
+}
 .inventoryLandingContainer {
     margin: 50px auto 10px auto;
     display: block;
@@ -10,16 +13,62 @@
 }
 
 .inventoryContainer {
-    height: 200px;
-    background-color: gray;
+    height: 100%;
+    background-color: rgb(7, 93, 163);
 }
 
 .inventoryLandingHeader { 
-    font-size: 16px;
+    font-size: 25px;
     text-align: center;
+    margin-top: 7%;
 }
 
-.inventoryList li { 
+.inventoryCard { 
     color: black;
     list-style: none;
+    display: block;
+    border: 2px solid black;
+    margin: 5px 20%;
+    padding: 30px;
+    text-align: center;
+    background-color: white;
+    box-shadow: 1px 1px 5px black;
+    font-size: 20px;
+}
+
+.checkInventoryButton {
+    margin-top: 20px;
+    background-color: rgb(5, 117, 209);
+    color: white;
+    padding: 10px;
+    font-family: 'Russo One', sans-serif;
+    font-size: 16px;
+    border: 2px solid black;
+    border-radius: 10%;
+}
+
+.checkInventoryButton:hover{
+    cursor: pointer;
+    box-shadow: 1px 1px 5px rgb(0, 0, 0);
+    transition: box-shadow 0.7s;
+    transition-timing-function: ease-in-out;
+    -webkit-transition-timing-function: ease-in-out;
+}
+
+.inventoryControlsContainer {
+    position: fixed;
+    width: 20%;
+    top: 20%;
+}
+
+.addInventoryButton{
+    margin-top: 20px;
+    background-color: rgb(5, 117, 209);
+    color: white;
+    padding: 10px;
+    font-family: 'Russo One', sans-serif;
+}
+
+.addInventoryInput {
+    padding-top: 2px;
 }
