Finished Trade feature. Small bug found when reloading trade page though. Will fix later

--- a/comiclysm-app/src/app/register-user-component/register-user-component.component.html
+++ b/comiclysm-app/src/app/register-user-component/register-user-component.component.html
@@ -13,7 +13,7 @@
                 <input class = "registerPassword" type = "password" placeholder= "password" [(ngModel)] = "userPassword" name = "userName">
             </div>
             <div class = "registerButtonContainer">
-                <button class = "registerButton" (click) = "register(userName, userPassword)">
+                <button class = "registerButton" (click) = "registerUser(userName, userPassword)">
                   Register
                 </button>
             </div>
